# ofoundation-python-engineer-test

./: .dockerignore  .env.example  Dockerfile  README.md  llm_agent_execution_core_technical_spec_implementation_guide.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  logger.py
app/agent/: __init__.py  core.py  planner.py  state.py
app/api/: __init__.py  dependencies.py  models.py  routes.py
app/llm/: __init__.py  interface.py  mock_client.py
app/tools/: __init__.py  base.py  governance.py  math.py  web_search.py
examples/: example_governance.py  example_math.py  example_web_search.py
